reset() split in 2 function clear() & add() aggregate function reinitialization (if no rows was found) made with help of clear() (fixed BUG#860)